# Mandelbrot-Set

./: CMakeLists.txt  README.md
src/: barrier.cpp  barrier.h  display.cpp  display.h  image.cpp  image.h  main.cpp  mandelbrot.cpp  mandelbrot.h  pixel.cpp  pixel.h  pixel_queue.cpp  pixel_queue.h  pixel_vector.cpp  pixel_vector.h  window.h
